# tanucc-script-rs

./: Cargo.toml  test.bat
face_data/: face_0.pkl  face_1.pkl  face_10.pkl  face_100.pkl  face_101.pkl  face_102.pkl  face_103.pkl  face_104.pkl  face_105.pkl  face_106.pkl  face_107.pkl  face_108.pkl  face_109.pkl  face_11.pkl  face_110.pkl  face_111.pkl  face_112.pkl  face_113.pkl  face_114.pkl  face_115.pkl  face_116.pkl  face_117.pkl  face_118.pkl  face_119.pkl  face_120.pkl  face_121.pkl  face_122.pkl  face_123.pkl  face_124.pkl  face_125.pkl  face_127.pkl  face_128.pkl  face_129.pkl  face_13.pkl  face_130.pkl  face_131.pkl  face_132.pkl  face_134.pkl  face_135.pkl  face_136.pkl  (+226 more)
script/: Log.txt  std.sc  std.txt  test.txt
script/example/: capture.py  main.sc  main.txt  run.bat  test.sc  test.txt  test2.txt
script/script-analysis/: ast.json
script/script-doc/: doc.html
script/test-dir/: test.txt
src/: cli.rs  context.rs  error.rs  lib.rs  main.rs  traits.rs  type_checker.rs  types.rs
src/decoder/: interpreter.rs
src/lexer/: tokenizer.rs
src/parser/: syntax.rs
tests/: integration_test.rs
