[package]
name = "tanucc-script"
version = "0.2.0"
edition = "2021"
[dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.16"
c-encode = { git = "https://github.com/tmaru0090/c-encode-rs", version = "0.1.0" }
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.5"
hostname = "0.4.0"
indexmap = "2.5.0"
libc = "0.2.159"
libloading = "0.8.5"
log = "0.4.22"
property-rs = { git = "https://github.com/tmaru0090/property-rs", version = "0.1.0" }
rodio = "0.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
symphonia = "0.5.4"
thiserror = "1.0.63"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"
uuid = { version = "1.10.0", features = ["v4"] }
whoami = "1.5.2"
win-msgbox = "0.2.1"
[features]
full = ["parser","lexer","decoder"]
lexer = []
parser = []
decoder = []
wip-system = []
